tests/baselines/reference/stringLiteralCheckedInIf01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralCheckedInIf01.ts(6,9): error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.
tests/cases/conformance/types/stringLiteral/stringLiteralCheckedInIf01.ts(9,14): error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralCheckedInIf01.ts (2 errors) ====
    
    type S = "a" | "b";
    type T = S[] | S;
    
    function f(foo: T) {
        if (foo === "a") {
            ~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.
            return foo;
        }
        else if (foo === "b") {
                 ~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '("a" | "b")[] | "a" | "b"' and 'string'.
            return foo;
        }
        else { 
            return (foo as S[])[0];
        }
    
        throw new Error("Unreachable code hit.");
    }